# mydbg

./: .gitignore  Cargo.toml  README.md  build.rs
debug/: Cargo.toml
debug/examples/: foo.rs
debug/src/: lib.rs
src/: debug.rs  lib.rs  read.rs  search.rs  sys.rs  thread.rs  trace.rs  util.rs
wrapping/: plugin.cpp
